--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
   <!-- Bebas Neue from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 
+  <!-- Font Awesome for the social icons -->
+<link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+>
+  
   <!-- Socket.IO client for chat participants -->
   <script src="https://cdn.socket.io/4.7.2/socket.io.min.js" defer></script>
 
@@ -61,7 +67,31 @@
 </header>
 
 <div class="teal-line"></div>
-  
+  <!-- thin brick strip above nav -->
+<div class="brick-strip thin"></div>
+
+<!-- brick-background nav -->
+<nav class="brick-nav">
+  <div class="nav-item nav-left">
+    <a href="#history">HISTORY</a>
+  </div>
+  <div class="nav-item nav-center">
+    <a href="index-ourDJS.html">OUR DJS</a>
+  </div>
+  <div class="nav-item nav-right">
+    <a href="#merch">MERCH</a>
+    <a href="https://facebook.com/cutterschoiceradio" target="_blank" class="social-icon">
+      <i class="fab fa-facebook-f"></i>
+    </a>
+    <a href="https://instagram.com/cutterschoiceradio" target="_blank" class="social-icon">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</nav>
+
+<!-- thin brick strip below nav -->
+<div class="brick-strip thin"></div>
+
 <div class="grid-container">
   <!-- CHAT SECTION -->
   <section class="chat">
