--- a/index.html
+++ b/index.html
@@ -35,7 +35,34 @@
     gtag('js', new Date());
     gtag('config', 'G-3MSGZZ5QL6');
   </script>
-
+<style>
+  .brick-strip.thin {
+    height: 40px;
+    background: url('https://i.imgur.com/JHiiSW4.png') center center repeat-x !important;
+    background-size: auto 40px !important;
+    margin:0; padding:0;
+  }
+  nav.brick-nav {
+    display: flex !important;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem 1rem;
+    background: url('https://i.imgur.com/JHiiSW4.png') center center repeat !important;
+    background-size: cover !important;
+    border-top: 2px solid var(--brand-teal);
+    border-bottom: 2px solid var(--brand-teal);
+  }
+  nav.brick-nav .nav-item { flex:1 }
+  nav.brick-nav a {
+    color:#fff !important;
+    font-family:'Bebas Neue',sans-serif;
+    font-size:1.4rem !important;
+    text-transform:uppercase;
+    text-decoration:none;
+    margin:0 .5rem;
+  }
+</style>
+  
 </head>
 <body>
 <header class="header-banner">
