--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <div class="brick-strip thin"></div>
 
 <!-- brick-background nav -->
-<nav class="brick-nav">
+<nav id="main-nav" class="brick-nav">
   <div class="nav-item nav-left">
     <a href="#history">HISTORY</a>
   </div>
